--- a/react-blog/blog/package.json
+++ b/react-blog/blog/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.1.0",
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.2.0",
+    "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "markdown-navbar": "^1.4.1",
     "next": "9.3.6",
